update gamba layout

--- a/01.HTML/01.Restaurant/_includes/footer.jade
+++ b/01.HTML/01.Restaurant/_includes/footer.jade
@@ -1,1 +1,78 @@
-<h1>footer</h1>
+//- .subscribe-email
+//-     .container
+//-         .subscribe-email-wrapper
+//-             .subscribe-email-left
+//-                 p.subscribe-email-title Check how all the dishes are cooked today!
+//-                 p.subscribe-email-text Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet
+//-             .subscribe-email-right
+//-                 form(action="index.html")
+//-                     .input-group.form-subscribe-email
+//-                         input.form-control(type="text", placeholder= "Write your email")
+//-                         button.btn.btn-email(type="submit") get offer
+//-             .clearfix
+.footer-wrapper
+    .footer-main.padding-bottom-100
+        .container
+            .footer-main-wrapper
+                .row
+                    .col-2
+                        .col-md-3.col-xs-6
+                            .gamba-descripton.widget
+                                img.logo-foogter(src="assets/images/logo/gamba-2.png", alt="")
+                                p.text Ut enim ad minim veniam, quis nostrud cittion ullamco laboris nisi ut aliquip cosquat uis aute irure dolor ullamco nisi inkabris reprhenderit  labore. cosquat uis aute irure dolor ullamco.
+                        .col-md-3.col-xs-6
+                            .gamba-info.widget
+                                .title Delivery Service
+                                .content-widget
+                                    .info-list
+                                        ul.list-unstyled
+                                            li
+                                               i.icons.fa.fa-envelope-o
+                                               a(href="#").link hello@gamba.com
+                                            li
+                                               i.icons.fa.fa-map-marker
+                                               a(href="#").link 416 Ridge Road, Pratt, KS 67124
+                                            li
+                                               i.icons.fa.fa-phone
+                                               a(href="#").link.link-2 (+1) 090-016-679 <br> (+1) 092-552-179
+                    .col-2
+                        .col-md-3.col-xs-6
+                            .gamba-opentime.widget
+                                .title Opening Time
+                                .content-widget
+                                    .time-service
+                                        .title-time lunch service
+                                        .content-time friday - sunday: 11am - 1.30pm
+                                    .time-service
+                                        .title-time dinner service
+                                        .content-time Daily: Bookings available 6am - 9.30pm
+                        .col-md-3.col-xs-6
+                            .gamba-gallery.widget
+                                .title gallery
+                                .content-widget
+                                    .item 
+                                        img(src="assets/images/footer/gallery-1.jpg", alt="")
+                                    .item 
+                                        img(src="assets/images/footer/gallery-2.jpg", alt="")
+                                    .item 
+                                        img(src="assets/images/footer/gallery-3.jpg", alt="")
+    .hyperlink
+        .container
+            .name-company.pull-left &copy; Designed by GAMBA.
+            .social-footer.pull-right
+                ul.list-inline.list-unstyled
+                    li
+                        a.link.facebook(href="#")
+                            i.fa.fa-facebook
+                    li
+                        a.link.twitter(href="#")
+                            i.fa.fa-twitter
+                    li
+                        a.link.pinterest(href="#")
+                            i.fa.fa-pinterest-p
+                    li
+                        a.link.google(href="#")
+                            i.fa.fa-google
+                    li
+                        a.link.instagram(href="#")
+                            i.fa.fa-instagram
