--- a/01.HTML/01.Restaurant/assets/css/layout.less
+++ b/01.HTML/01.Restaurant/assets/css/layout.less
@@ -11,161 +11,606 @@
  *    - 0.2. Font
  *  1. GLOBAL STYLE
  *    - 1.1. Scaffolding
+ *    - 1.2. CSS for page
  *  2. HEADER
- *    - 2.1. Topbar Header
- *    - 2.2. Main Header
- *    - 2.3. Navigation
- *  3. CONTENT
- *    - 3.1. Slide Banner
- *    - 3.2. Page Title & Breadcrumb
- *    - 3.3. Main Content
+ *    - 2.1. Header Topbar
+ *    - 2.2. Header banner
+ *    - 2.3. Header main
+ *    - 2.4. Navigation / Menu
+ *    - 2.5. More style
+ *  3. FOOTER
+ *    - 3.1. Main Footer
+ *    - 3.2. Sub Footer
+ *    - 3.3. Copyright
  *  4. SIDEBAR
  *    - 4.1. Left Sidebar
  *    - 4.2. Right Sidebar
  *    - 4.3. Both Sidebar
- *  5. FOOTER
- *    - 5.1. Main Footer
- *    - 5.2. Sub Footer
- *    - 5.3. Copyright
  */
 
 
-/*=====================================
-=            VARIABLE LESS            =
-=====================================*/
+/*=============================
+ =====   VARIABLE LESS    =====
+ =============================*/
+
+// Core variables and mixins
+@import "../less/library.less";
 
 /*----------  0.1. Color  ----------*/
-@brand-primary: #777777;
-@brand-secondary: #777777;
-@brand-success: #777777;
-@brand-info: #777777;
-@brand-warning: #777777;
-@brand-danger: #777777;
-@text-color: #777777;
+@text-color: #50545c;
+@title-color: #01050e;
+@main-color: #ed421c;
+
 
 /*----------  0.2. Font  ----------*/
+
 @font-family: "Roboto", Helvetica, Arial, sans-serif;
+@font-family2: "Oswald", sans-serif;
 @font-size: 14px;
 
-/*=====  End of VARIABLE LESS  ======*/
+/*=============================
+ ====  END VARIABLE LESS   ====
+ =============================*/
 
 
 
+/*=============================
+ ======   GLOBAL STYLE   ======
+ =============================*/
 
-/*====================================
-=            GLOBAL STYLE            =
-====================================*/
 
 /*----------  1.1. Scaffolding  ----------*/
+
 html * {
-  outline: 0 !important;
+    outline: 0 !important;
 }
 
-html, body {
-  min-height: 100%;
-  overflow-x: hidden;
+html,
+body {
+    height: 100%;
+    margin: 0 auto;
+    padding: 0;
+    -wenkit-font-smoothing: subpixel-antialiased;
+}
+
+html {
+    font-size: @font-size;
 }
 
 body {
-  font-family: @font-family;
-  font-size: @font-size;
-  line-height: 24px;
-  font-weight: 400;
-  color: @text-color;
-  background-color: #fff;
-}
-
-p, a, label, span {
-  font-size: 1em;
+    font-family: @font-family;
+    line-height: 24px;
+    font-size: @font-size;
+    font-weight: 400;
+    color: @text-color;
+    background-color: #fff;
 }
 
 a {
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  -ms-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-
-  &:hover, &:active, &:focus {
-    text-decoration: none;
-    color: @brand-primary;
-  }
+    .transition(all 0.3s ease);
+    &:hover,
+    &:active,
+    &:focus {
+        text-decoration: none;
+        border-bottom: none;
+    }
 }
 
-/*=====  End of GLOBAL STYLE  ======*/
+.body-wrapper {
+    position: relative;
+    overflow: hidden;
+}
 
 
-/*==============================
-=            HEADER            =
-==============================*/
+/*----------  1.2. CSS for page  ----------*/
+
+.padding-top-100 {
+    padding-top: 100px;
+}
+
+.padding-bottom-100 {
+    padding-bottom: 100px;
+}
+
+.padding-top-70 {
+    padding-top: 70px;
+}
+
+.margin-top-70 {
+    margin-top: 70px;
+}
+
+/*===============================
+ ======  END GLOBAL STYLE  ======
+ ===============================*/
+
+
+
+
+ /*==============================
+ ========     HEADER     ========
+ ===============================*/
+.bg-transparent {
+    background-color: transparent;
+    .transition (all 0.6s ease);
+    .header-topbar {
+        .link {
+            color: #e3e3e3;
+            &:hover {
+                color: @main-color;
+            }
+        }
+        border-color: rgba(255, 255, 255, 0.3);
+    }
+    .header-main {
+        box-shadow: none;
+        .navigation {
+            .nav-links {
+                .main-menu {
+                    color: #e3e3e3;
+                }
+            }
+        }
+        &.header-fixed {
+            background-color: #121212;
+            .navigation {
+                .nav-links {
+                    .main-menu {
+                        color: #e3e3e3;
+                    }
+                }
+            }
+            .nav-search {
+                background-color: #121212;
+                border-top: 1px solid #e3e3e3;
+
+                form {
+                    input[type='text'] {
+                        background-color: #fff;
+                    }
+
+                    .searchbutton {
+                        background-color: @main-color;
+                    }
+                }
+            }
+        }
+    }
+}
 
 /*----------  2.1. Topbar Header  ----------*/
-/* Enter your code */
+
+.header-topbar {
+    width: 100%;
+    line-height: 50px;
+    position: relative;
+    z-index: 101;
+    border-bottom: 1px solid;
+    font-size: 0.9rem;
+    .topbar-left {
+        margin-bottom: 0;
+        float: left;
+        > li {
+            display: inline-block;
+            padding: 0 15px;
+            position: relative;
+            &:first-child {
+                padding-left: 0;
+            }
+            &:last-child {
+                padding-right: 0;
+                border: none;
+            }
+        }
+        .link {
+            margin-bottom: 0;
+            text-transform: capitalize;
+            .transition (all 0.3s ease);
+            .icons {
+                font-size: 8px;
+                margin-right: 7px;
+                position: relative;
+                top: -2px;
+            }
+            .icons-2 {
+                margin-right: 7px;
+            }
+            &:hover {
+                color: @main-color;
+            }
+        }
+    }
+
+    .topbar-right {
+        margin-bottom: 0;
+        float: right;
+        .link {
+            width: 25px;
+            display: block;
+            font-size: 14px;
+            text-align: center; 
+        }
+    }
+}
 
 /*----------  2.2. Main Header  ----------*/
-/* Enter your code */
+
+.header-main {
+    width: 100%;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: relative;
+    z-index: 100;
+    .transition (all 0.3s ease);
+
+    .navbar-header {
+        float: left;
+    }
+
+    .navigation {
+        float: right;
+    }
+
+    .logo {
+        line-height: 100px;
+        .header-logo {
+            img {
+                max-width: 130px;
+                width: 100%;
+                .transition (all 0.3s ease);
+            }
+        }
+    }
+
+    &.header-fixed {
+        position: fixed;
+        top: 0;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        border-bottom: 0;
+        .transition (all 0.6s ease);
+        .logo {
+            line-height: 50px;
+
+            .header-logo img {
+                max-width: 90px;
+                width: 100%;
+            }
+        }
+        .navigation {
+            .nav-links {
+                .main-menu {
+                    line-height: 50px;
+                    font-size: 14px;
+                    &:before {
+                        top: 10px;
+                    }
+                    &:after {
+                        bottom: 10px;
+                    }
+                }
+            }
+        }
+        .nav-search {
+            top: 50px;
+        }
+    }
+
+    &.hide-menu {
+        top: -180px !important;
+        position: fixed;
+        .transition (all 0.6s ease);
+        .logo {
+            line-height: 41px;
+            .header-logo img {
+                max-width: 125px;
+                width: 100%;
+            }
+        }
+        .navigation {
+            .nav-links {
+                .main-menu {
+                    line-height: 50px;
+                }
+            }
+        }
+    }
+}
+
 
 /*----------  2.3. Navigation  ----------*/
-/* Enter your code */
 
+.nav-search {
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+    position: absolute;
+    right: 0;
+    top: 100px;
+    form {
+        display: table;
+        width: 100%;
+        height: 40px;
+        input[type='text'] {
+            border: none;
+            display: table-cell;
+            width: 225px;
+            height: 40px;
+            padding: 0 20px;
+        }
 
-/*=====  End of HEADER  ======*/
+        .searchbutton {
+            width: 40px;
+            height: 40px;
+            padding: 0;
+            display: table-cell;
+            border: none;
+            box-shadow: none;
+            background-color: transparent;
+            text-align: center;
+            vertical-align: middle;
+            position: relative;
+            top: -1px;
+        }
+    }
+}
+
+.navigation {
+    position: relative;
+    .nav-links {
+        position: relative;
+        li {
+            &.active,
+            &:hover {
+                .main-menu {
+
+                     &:after,
+                    &:before {
+                        width: 100%;
+                    }
+                }
+
+            }
+        }
+        .main-menu {
+            line-height: 100px;
+            padding: 0;
+            margin: 0 22px;
+            font-size: 15px;
+            color: @text-color;
+            font-family: @font-family2;
+            text-transform: uppercase;
+            position: relative;
+            background-color: transparent;
+            .transition (all 0.3s ease);
+            .icons-dropdown {
+                padding-left: 5px;
+
+                i {
+                    .transition (all 0.4s ease);
+                }
+            }
+
+            &:after,
+            &:before {
+                position: absolute;
+                content: '';
+                width: 0;
+                height: 2px;
+                background-color: @main-color;
+                .transition (all 0.5s ease);
+            }
+
+            &:after {
+                bottom: 30px;
+                right: 0;
+            }
+
+            &:before {
+                top: 30px;
+                left: 0;
+            }
+        }
+
+        .button-search {
+            cursor: pointer;
+            .main-menu {
+                margin-right: 0;
+                &:after, &:before { 
+                    display: none;
+                }
+            }
+        }
+    }
+}
+
+/*===============================
+ =======  End of HEADER  ========
+ ===============================*/
 
 
 
 
 /*===============================
-=            CONTENT            =
-===============================*/
+ ========     FOOTER     ========
+================================*/
+footer {
+    width: 100%;
+    height: 100vh;
+    display: table;
+    position: relative;
+    color: #d8e3f7;
+    background-color: #000205;
+    background-image: url('../images/background-full/footer.jpg');
+    background-size: cover;
+    background-position: center;
+    &:before {
+        position: absolute;
+        content: "";
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        background-color: rgba( 0, 2, 5, 0.9 );
+    }
+}
 
-/*----------  3.1. Slide Banner  ----------*/
-/* Enter your code */
+.footer-wrapper {
+    display: table-cell;
+    vertical-align: middle;
+    .widget {
+        .title {
+            font-family: @font-family2;
+            font-size: 20px;
+            color: #d1d1d1;
+            position: relative;
+            padding-bottom: 15px;
+            &:before {
+                position: absolute;
+                content: "";
+                bottom: 0;
+                left: 0;
+                width: 50px;
+                height: 2px;
+                background-color: @main-color;
+            }
+        }
+        .content-widget {
+            margin-top: 40px;
+        }
+    }
+}
+.hyperlink {
+    position: absolute;
+    width: 100%;
+    left: 0;
+    bottom: 0;
+    border-top: 1px solid #181e29;
+    padding: 40px 0;
+    color: #303540;
+    .name-company {
+        font-weight: bold;
+    }
+    .social-footer {
+        ul {
+            margin-bottom: 0;
+        }
+        .link {
+            width: 28px;
+            text-align: center;
+            color: #303540;
+            font-size: 18px;
+            display: block;
+            &:hover {
+                color: @main-color;
+            }
+        }
+    }
+}
 
-/*----------  3.2. Page Title & Breadcrumb  ----------*/
-/* Enter your code */
+.gamba-descripton {
+    position: relative;
+    top: -20px;
+    .logo-foogter {
+        margin-bottom: 40px;
+    }
+    .text {
+        margin-bottom: 0;
+    }
+}
 
-/*----------  3.3. Main Content  ----------*/
-/* Enter your code */
+.gamba-info {
+    .info-list {
+        ul {
+            margin-bottom: 0;
+            li {
+                display: table;
+                border: none;
+                width: 100%;
+                padding: 0 0 10px;
+                .icons {
+                    display: table-cell;
+                    width: 25px;
+                }
+                .link {
+                    display: table-cell;
+                    color: #d8e3f7;
+                    .transition(all 0.6s ease);
+                    &:hover {
+                        color: @main-color;
+                    }
+                }
+                .link-2 {
+                    line-height: 30px;
+                }
+            }
+        }
+    }
+}
 
-/*=====  End of CONTENT  ======*/
+.gamba-opentime {
+    .time-service {
+        margin-bottom: 15px;
+        &:last-child {
+            margin-bottom: 0;
+        }
+        .title-time {
+            text-transform: uppercase;
+            margin-bottom: 8px;
+        }
+        .content-time {
+            text-transform: capitalize;
+        }
+    }
+}
 
-
-
+.gamba-gallery {
+    .content-widget {
+        margin: 0 -10px;
+        .item {
+            padding: 0 10px;
+        }
+    }
+    .slick-prev, .slick-next {
+        top: 120%;
+        &:before {
+            font-family: 'FontAwesome';
+            font-size: 16px;
+            opacity: 1;
+            color: #d8e3f7;
+            .transition( all 0.5s ease);
+        }
+        &:hover {
+            &:before {
+                color: @main-color;
+            }
+        }
+    }
+    .slick-prev {
+        left: auto;
+        right: 20px;
+        &:before {
+            content: "\f104";
+        }
+    }
+    .slick-next {
+        right: 0;
+        &:before {
+            content: "\f105";
+            
+        }
+    }
+}
 
 /*===============================
-=            SIDEBAR            =
-===============================*/
-
-/*----------  4.1. Left Sidebar  ----------*/
-.sidebar-left {
-  float: left;
-}
-
-/*----------  4.2. Right Sidebar  ----------*/
-.sidebar-right {
-  float: right;
-}
-
-/*----------  4.3. Both Sidebar  ----------*/
-/* Enter your code */
-
-/*=====  End of SIDEBAR  ======*/
+ ========  End of FOOTER  =======
+ ===============================*/
 
 
 
 
-/*==============================
-=            FOOTER            =
-==============================*/
+ /*==============================
+ =======     SIDEBAR      =======
+ ===============================*/
 
-/*----------  5.1. Main Footer  ----------*/
-/* Enter your code */
-
-/*----------  5.2. Sub Footer  ----------*/
-/* Enter your code */
-
-/*----------  5.3. Copyright  ----------*/
-/* Enter your code */
-
-
-/*=====  End of FOOTER  ======*/
+/*===============================
+ =======  End of SIDEBAR  =======
+ ===============================*/
