--- a/01.HTML/01.Restaurant/index.jade
+++ b/01.HTML/01.Restaurant/index.jade
@@ -1,5 +1,19 @@
-H1 This is Content
-
-//- CASE: IMPORT SAMPLE WIDGET
-//- .section
-//-    != partial("_includes/widgets/sample-widget.jade")
+section.homepage-banner.homepage-default
+    .container
+        .homepage-banner-warpper
+            .homepage-banner-content
+                .group-title
+                    h1.title WELCOME TO GAMBA RESTAURANT
+                    p.text The Seafood Restaurant has been voted by locals as "Best in the area" year after year. We actively seek out the freshest in regional seafood and produce our restaurant is expanding.
+                .group-open-hours
+                    h5.title open hours
+                    .time-1
+                        .day Monday - Friday :
+                        .time 07:30 am - 11:00 pm
+                    .time-2
+                        .day Saturday - Sunday :
+                        .time 08:30 am - 12:00 pm
+                .group-btn
+                    a.btn.btn-left.btn-maincolor(href="#") Resever Now 
+                    a.btn.btn-right.btn-transparent(href="#")  purchase now
+section(style="height: 2000px")
