--- a/01.HTML/01.Restaurant/_includes/header.jade
+++ b/01.HTML/01.Restaurant/_includes/header.jade
@@ -1,1 +1,46 @@
-<h1>Header</h1>
+.bg-transparent
+    .header-topbar
+        .container
+            ul.topbar-left.list-unstyled.pull-left
+                li
+                    a.link(href="#") 
+                        i.icons.fa.fa-circle
+                        span book now
+                li
+                    a.link(href="#") 
+                        i.icons.fa.fa-circle
+                        span order online
+                li
+                    a.link(href="javascript:void(0)") 
+                        i.icons-2.fa.fa-clock-o
+                        span 07:30 am - 11:00 pm
+                    
+            ul.topbar-right.list-unstyled.list-inline
+                li
+                    a.link.facebook(href="#")
+                        i.fa.fa-facebook
+                li
+                    a.link.twitter(href="#")
+                        i.fa.fa-twitter
+                li
+                    a.link.pinterest(href="#")
+                        i.fa.fa-pinterest-p
+                li
+                    a.link.google(href="#")
+                        i.fa.fa-google
+                li
+                    a.link.instagram(href="#")
+                        i.fa.fa-instagram
+    .header-main
+        .container
+            .header-main-wrapper
+                .hamburger-menu
+                    .hamburger-menu-wrapper
+                        .icons
+                .navbar-header
+                    .logo
+                        a.header-logo(href="index.html")
+                            img(src="assets/images/logo/gamba.png", alt="")
+                nav.navigation
+                    != partial("navigation")
+                .clearfix
