--- a/01.HTML/01.Restaurant/_layout.jade
+++ b/01.HTML/01.Restaurant/_layout.jade
@@ -2,66 +2,72 @@ doctype
 html(lang="en")
     head
         title
-            | Sample Title
-        meta(charset="utf-8")
-        meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
+            | Gamba
+            = " | "
+            = title
+        meta(http-equiv="content-type", content="text/html; charset=utf-8")
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        
+
         // FONT CSS
-        link(type="text/css", rel='stylesheet', href="http://fonts.googleapis.com/css?family=Roboto:300,400,700,900")
+        link(type="text/css", rel='stylesheet', href="https://fonts.googleapis.com/css?family=Roboto")
+        link(type="text/css", rel='stylesheet', href="https://fonts.googleapis.com/css?family=Oswald")
         link(type="text/css", rel="stylesheet", href="assets/font/font-icon/font-awesome/css/font-awesome.css")
-        
+
+
         // LIBRARY CSS
         link(type="text/css", rel="stylesheet", href="assets/libs/bootstrap/css/bootstrap.min.css")
-        
+        link(type="text/css", rel='stylesheet', href='assets/libs/slick-slider/slick.css')
+        link(type="text/css", rel='stylesheet', href='assets/libs/slick-slider/slick-theme.css')
+
         // STYLE CSS
         link(type="text/css", rel='stylesheet', href='assets/css/layout.css')
         link(type="text/css", rel='stylesheet', href='assets/css/components.css')
         link(type="text/css", rel='stylesheet', href='assets/css/responsive.css')
-            
+
+        for page, key in public._data
+            if(current.source == key)
+                for css in page.url_style
+                    if(css.src != undefined)
+                        link(type="text/css", rel="stylesheet", href="#{css.src}")
+
     body
-        // HEADER
-        header
-            != partial("_includes/header")
+        //BEGIN PAGE LOADER
+        .body-wrapper
+            // MENU MOBILE
+            //- .wrapper-mobile-nav
+            //-     != partial("_includes/menu-mobile")
 
-            //- CASE: MULTI HEADER
-            //- if (current.source == 'homepage-01')
-            //-     != partial("_includes/header-01")
-            //- else if (current.source == 'homepage-02')
-            //-     != partial("_includes/header-02")
-            //- else
-            //-     != partial("_includes/header")
+            // WRAPPER CONTENT
+            .wrapper-content
+                // HEADER
+                header
+                    != partial("_includes/header")
 
-        // WRAPPER
-        #wrapper-content
-            // PAGE WRAPPER
-            #page-wrapper
-                // MAIN CONTENT
-                .main-content
-                    // CONTENT
-                    .content
+                // WRAPPER
+                #wrapper-content
+                    // MAIN CONTENT
+                    .main-content
                         != yield
 
-        // FOOTER
-        footer
-            != partial("_includes/footer")
+                // FOOTER
+                footer
+                    != partial("_includes/footer")
 
-            //- CASE: MULTI FOOTER
-            //- if (current.source == 'homepage-01')
-            //-     != partial("_includes/footer-01")
-            //- else if (current.source == 'homepage-02')
-            //-     != partial("_includes/footer-02")
-            //- else
-            //-     != partial("_includes/footer")
+                // BUTTON BACK TO TOP
+                //- .btn-wrapper.back-to-top
+                //-     a.btn.btn-transparent(href="#top")
+                //-         i.fa.fa-angle-double-up
 
         // LIBRARY JS
-        script(src="assets/libs/jquery/jquery-2.1.4.min.js")
+        script(src="assets/libs/jquery/jquery-2.2.3.min.js")
         script(src="assets/libs/bootstrap/js/bootstrap.min.js")
+        script(src="assets/libs/smooth-scroll/jquery-smoothscroll.js")
+        script(src="assets/libs/slick-slider/slick.min.js")
 
         // MAIN JS
-        script(src="assets/js/main.js")
+        script(src="assets/js/main.js")  
 
-        // LOADING JS FOR PAGE
+        // LOADING SCRIPTS FOR PAGE
         for page, key in public._data
             if(current.source == key)
                 for js in page.url_script
