--- a/01.HTML/01.Restaurant/assets/css/components.less
+++ b/01.HTML/01.Restaurant/assets/css/components.less
@@ -6,91 +6,187 @@
  *
  * Summary:
  *
- *	0. VARIABLE LESS
- *		- 0.1. Color
- *		- 0.2. Font
- *	1. GLOBAL STYLE
- *		- 1.1. TYPE ELEMENT
- *		- 1.2. TYPE ELEMENT
- *	2. WIDGET
- *		- 2.1. TYPE ELEMENT
- *		- 2.2. TYPE ELEMENT
- *	3. PAGE
- *		- 3.1. Page Sample 1
- *		- 3.2. Page Sample 2
- *	4. PLUGIN
- *		- 4.1. jQuery Plugin 1
- *		- 4.2. jQuery Plugin 2
+ *  0. VARIABLE LESS
+ *      - 0.1. Color
+ *  1. GLOBAL STYLE
+ *      - 1.1. BREADCRUMB & BUTTON & LINE
+ *      - 1.2. HEADER AND SUB-HEADER
+ *      - 1.3. TEXT-DESCRIPTION
+ *      - 1.4. CONTACT-FORM
+ *      - 1.5. SIDEBAR
+ *  2. WIDGET
+ *      - 2.1. RECENT POSTS
+ *      - 2.2. CATEGORY & ARCHIVE
+ *      - 2.3. TAGS
+ *  3. PAGE
+ *      - 3.1. PAGES 404
+ *      - 3.2. FAQ
+ *      - 3.3. GALLERY
+ *  4. PLUGIN
+ *      - 4.1. jQuery Plugin 1
+ *      - 4.2. jQuery Plugin 2
+ *  5. RESPONSIVE
  */
 
 
-/*=====================================
-=            VARIABLE LESS            =
-=====================================*/
+/*=============================
+ =====   VARIABLE LESS    =====
+ =============================*/
+
+// Core variables and mixins
+@import "../less/library.less";
 
 /*----------  0.1. Color  ----------*/
-@brand-primary: #777777;
-@brand-secondary: #777777;
-@brand-success: #777777;
-@brand-info: #777777;
-@brand-warning: #777777;
-@brand-danger: #777777;
-@text-color: #777777;
+@text-color: #50545c;
+@title-color: #01050e;
+@main-color: #ed421c;
+
 
 /*----------  0.2. Font  ----------*/
+
 @font-family: "Roboto", Helvetica, Arial, sans-serif;
+@font-family2: "Oswald", sans-serif;
 @font-size: 14px;
 
-/*=====  End of VARIABLE LESS  ======*/
 
 
 
-
-/*====================================
-=            GLOBAL STYLE            =
-====================================*/
-
-/* Enter your code */
-
-/*=====  End of GLOBAL STYLE  ======*/
+/*=============================
+ ====  END VARIABLE LESS   ====
+ =============================*/
 
 
+/*=============================
+ ======   GLOBAL STYLE   ======
+ =============================*/
+.btn {
+    border: 2px solid;
+    width: 200px;
+    height: 40px;
+    line-height: 36px;
+    padding: 0 20px;
+    .circle (0);
+    text-transform: uppercase;
+    &.btn-maincolor {
+        background-color: @main-color;
+        border-color: @main-color;
+        color: #fff
+    }
+    &.btn-transparent {
+        border-color: #fff;
+        //background-color: transparent;
+        color: #fff;
+    }
+}
+
+.group-btn {
+    .btn-left {
+        margin-right: 12px;
+    }
+}
+
+/*=============================
+ ======      WIDGET      ======
+ =============================*/
 
 
-/*==============================
-=            WIDGET            =
-==============================*/
 
-/* Enter your code */
-
-/*=====  End of WIDGET  ======*/
+/*=============================
+ ======       PAGE       ======
+ =============================*/
 
 
 
+/*=============================
+ ======     END PAGE     ======
+ =============================*/
 
-/*============================
-=            PAGE            =
-============================*/
+/*----------  1.1. home page  ----------*/
+.homepage-banner {
+    position: relative;
+    background-repeat: repeat;
+    background-position: center;
+    background-size: cover;
+    -webkit-background-size: cover;
+    width: 100%;
+    height: 100vh;
+    color: #fff;
+    background-color: #01050e;
+    overflow: hidden;
+    .container {
+        height: 100%;
+    }
+    &.homepage-default {
+        text-align: left;
+        background-attachment: fixed;
+        background-image: url('../images/background-full/homepage-default.jpg');
+    }
+}
 
-/*----------  3.1. Page Sample 1  ----------*/
-/* Enter your code */
+.homepage-default {
+    color: #e3e3e3;
+    .homepage-banner-warpper {
+        display: table;
+        width: 100%;
+        height: 100%;
+        max-width: 770px;
+    }
+    .homepage-banner-content {
+        display: table-cell;
+        vertical-align: middle;
+        max-width: 770px;
+        .group-title {
+            .title {
+                margin: 0;
+                font-size: 45px;
+                font-weight: bold;
+                text-transform: uppercase;
+                color: #fff;
+                font-family: @font-family2;
+                letter-spacing: 3px;
+                margin-bottom: 25px;
+            }
+            .text {
+                margin: 0;
+                font-size: 16px;
+            }
+        }
+        .group-open-hours {
+            margin-top: 25px;
+            .title {
+                font-size: 18px;
+                color: #fff;
+                text-transform: capitalize;
+                margin-bottom: 15px;
+            }
+            .time-1, .time-2 {
+                .day {
+                    min-width: 130px;
+                    display: inline-block;
+                    text-transform: capitalize;
+                }
+                .time {
+                    display: inline-block;
+                }
+            }
+            .time-1 {
+                margin-bottom: 5px;
+            }
+        }
+        .group-btn {
+            margin-top: 40px;
+        }
+    }
+}
 
-/*----------  3.2. Page Sample 2  ----------*/
-/* Enter your code */
+/*=============================
+ ======      PLUGIN      ======
+ =============================*/
 
-/*=====  End of PAGE  ======*/
-
-
-
-
-/*==============================
-=            PLUGIN            =
-==============================*/
 
 /*----------  4.1. jQuery Plugin 1  ----------*/
-/* Enter your code */
 
-/*----------  4.2. jQuery Plugin 2  ----------*/
-/* Enter your code */
 
-/*=====  End of PLUGIN  ======*/
+/*=============================
+ ======      PLUGIN      ======
+ =============================*/
