--- a/01.HTML/01.Restaurant/assets/css/responsive.less
+++ b/01.HTML/01.Restaurant/assets/css/responsive.less
@@ -1,3 +1,4 @@
+
 /**
  * [Table of contents]
  *
@@ -14,8 +15,9 @@
  *    - 1.3. Media screen max width 767px
  *    - 1.4. Media screen max width 600px
  *    - 1.5. Media screen max width 480px
- *    - 1.6. Media screen max width 380px
- *    - 1.7. Media screen max width 320px
+ *    - 1.6. Media screen max width 414px
+ *    - 1.7. Media screen max width 380px
+ *    - 1.8. Media screen max width 320px
  */
 
 
@@ -23,57 +25,48 @@
 =            VARIABLE LESS            =
 =====================================*/
 
+@import "../less/library.less";
+
 /*----------  0.1. Color  ----------*/
-@brand-primary: #777777;
-@brand-secondary: #777777;
-@brand-success: #777777;
-@brand-info: #777777;
-@brand-warning: #777777;
-@brand-danger: #777777;
-@text-color: #777777;
 
 /*=====  End of VARIABLE LESS  ======*/
 
-
+// @import "library";
 
 
 /*=========================================
 =            RESPONSIVE SCREEN            =
+
 =========================================*/
 
 /*----------  1.1. Media screen max width 1024px  ----------*/
 @media screen and (max-width: 1024px) {
-
 }
 
 /*----------  1.2. Media screen max width 768px  ----------*/
 @media screen and (max-width: 768px) {
-
 }
 
 /*----------  1.3. Media screen max width 767px  ----------*/
 @media screen and (max-width: 767px) {
-
 }
 
 /*----------  1.4. Media screen max width 600px  ----------*/
 @media screen and (max-width: 600px) {
-
 }
 
 /*----------  1.5. Media screen max width 480px  ----------*/
 @media screen and (max-width: 480px) {
-
 }
 
-/*----------  1.6. Media screen max width 380px  ----------*/
+/*----------  1.6. Media screen max width 414px  ----------*/
+@media screen and (max-width: 414px) {
+}
+
+/*----------  1.7. Media screen max width 380px  ----------*/
 @media screen and (max-width: 380px) {
-
 }
 
-/*----------  1.7. Media screen max width 320px  ----------*/
+/*----------  1.8. Media screen max width 320px  ----------*/
 @media screen and (max-width: 320px) {
-
 }
-
-/*=====  End of RESPONSIVE SCREEN  ======*/
