--- a/01.HTML/01.Restaurant/assets/css/layout.less
+++ b/01.HTML/01.Restaurant/assets/css/layout.less
@@ -499,6 +499,7 @@ footer {
             color: #d1d1d1;
             position: relative;
             padding-bottom: 15px;
+            text-transform: capitalize;
             &:before {
                 position: absolute;
                 content: "";
