--- a/01.HTML/01.Restaurant/_includes/header/header.jade
+++ b/01.HTML/01.Restaurant/_includes/header/header.jade
@@ -9,7 +9,7 @@
                 li
                     a.link(href="#") 
                         i.icons.fa.fa-circle
-                        span order online
+                        span Order Online
                 li
                     a.link(href="javascript:void(0)") 
                         i.icons-2.fa.fa-clock-o
