--- a/01.HTML/01.Restaurant/_includes/new-of-day.jade
+++ b/01.HTML/01.Restaurant/_includes/new-of-day.jade
@@ -13,7 +13,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .day 27
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title Fish Tales sells all sorts of fresh fish.
+                                a(href="blog.html").title Fish Tales sells all sorts of fresh fish.
                                 .info
                                     .item.tag
                                         a.link(href="#") Food
@@ -27,7 +27,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .description
                                     p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci di dunt ut labore et dolore magna aliqua. Ut enim ad minim derit veniam, quis nos trud exercitation.
                                     p.text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa quae ab illo inventore veritatis et. Excepteur sint occaecat datat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus errorinventore veritatis et.
-                                a(href="#").btn-readmore read more
+                                a(href="blog.html").btn-readmore read more
                                 .tags
                                     .title tags
                                     ul.list-inline.list-tag
@@ -49,7 +49,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .day 28
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title Fish Tales sells all sorts of fresh fish.
+                                a(href="blog.html").title Fish Tales sells all sorts of fresh fish.
                                 .info
                                     .item.tag
                                         a.link(href="#") Food
@@ -63,7 +63,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .description
                                     p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci di dunt ut labore et dolore magna aliqua. Ut enim ad minim derit veniam, quis nos trud exercitation.
                                     p.text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa quae ab illo inventore veritatis et. Excepteur sint occaecat datat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus errorinventore veritatis et.
-                                a(href="#").btn-readmore read more
+                                a(href="blog.html").btn-readmore read more
                                 .tags
                                     .title tags
                                     ul.list-inline.list-tag
@@ -85,7 +85,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .day 29
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title Fish Tales sells all sorts of fresh fish.
+                                a(href="blog.html").title Fish Tales sells all sorts of fresh fish.
                                 .info
                                     .item.tag
                                         a.link(href="#") Food
@@ -99,7 +99,7 @@ section.new-of-day.padding-top-100.padding-bottom-100
                                 .description
                                     p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci di dunt ut labore et dolore magna aliqua. Ut enim ad minim derit veniam, quis nos trud exercitation.
                                     p.text Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium eaque ipsa quae ab illo inventore veritatis et. Excepteur sint occaecat datat non proident, sunt in culpa qui officia runt sed ut perspiciatis unde omnis iste natus errorinventore veritatis et.
-                                a(href="#").btn-readmore read more
+                                a(href="blog.html").btn-readmore read more
                                 .tags
                                     .title tags
                                     ul.list-inline.list-tag
