--- a/01.HTML/01.Restaurant/_includes/widgets/gallery-widget.jade
+++ b/01.HTML/01.Restaurant/_includes/widgets/gallery-widget.jade
@@ -3,26 +3,26 @@
     .content-widget
         ul.list-unstyled.list-inline
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-15.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-9.jpg" alt="gallery image 1")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-14.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-3.jpg" alt="gallery image 2")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-10.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-10.jpg" alt="gallery image 3")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-11.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-5.jpg" alt="gallery image 4")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-12.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-8.jpg" alt="gallery image 5")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-16.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-6.jpg" alt="gallery image 6")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-17.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-12.jpg" alt="gallery image 7")
             li
-                a.thumb(href="#")
+                a.thumb.fancybox(href="assets/images/background-full/banner-18.jpg", data-fancybox-group='gallery')
                     img.img-responsive(src="assets/images/menu/small-menu-7.jpg" alt="gallery image 8")
