--- a/01.HTML/01.Restaurant/_includes/widgets/recent-post-widget.jade
+++ b/01.HTML/01.Restaurant/_includes/widgets/recent-post-widget.jade
@@ -3,7 +3,7 @@
     .content-widget
         .recent-post-list
             .single-recent-post-widget
-                a.thumb.img-wrapper(href="#")
+                a.thumb.img-wrapper(href="blog-detail.html")
                     img.img-responsive(src="assets/images/menu/small-menu-7.jpg", alt="")
                 .post-info
                     .meta-info
@@ -13,7 +13,7 @@
                         span.fa-custom.comment-count 239
                     .description Donec ullamcorper nulla non metus nisi auctor fringilla they can do.
             .single-recent-post-widget
-                a.thumb.img-wrapper(href="#")
+                a.thumb.img-wrapper(href="blog-detail.html")
                     img(src="assets/images/menu/small-menu-9.jpg", alt="")
                 .post-info
                     .meta-info
@@ -23,7 +23,7 @@
                         span.fa-custom.comment-count 239
                     .description Donec ullamcorper nulla non metus nisi auctor fringilla they can do.
             .single-recent-post-widget
-                a.thumb.img-wrapper(href="#")
+                a.thumb.img-wrapper(href="blog-detail.html")
                     img.img-responsive(src="assets/images/menu/small-menu-10.jpg", alt="")
                 .post-info
                     .meta-info
@@ -33,7 +33,7 @@
                         span.fa-custom.comment-count 239
                     .description Donec ullamcorper nulla non metus nisi auctor fringilla they can do.
             .single-recent-post-widget
-                a.thumb.img-wrapper(href="#")
+                a.thumb.img-wrapper(href="blog-detail.html")
                     img.img-responsive(src="assets/images/menu/small-menu-8.jpg", alt="")
                 .post-info
                     .meta-info
@@ -43,7 +43,7 @@
                         span.fa-custom.comment-count 239
                     .description Donec ullamcorper nulla non metus nisi auctor fringilla they can do.
             .single-recent-post-widget
-                a.thumb.img-wrapper(href="#")
+                a.thumb.img-wrapper(href="blog-detail.html")
                     img.img-responsive(src="assets/images/menu/small-menu-4.jpg", alt="")
                 .post-info
                     .meta-info
