--- a/01.HTML/01.Restaurant/homepage-3.jade
+++ b/01.HTML/01.Restaurant/homepage-3.jade
@@ -54,7 +54,7 @@ section.about-us-3.padding-top-100.padding-bottom-100
                         .video-button-play 
                             i.icons.fa.fa-play
                         .video-button-close
-                        iframe.video-embed(src="https://www.youtube.com/embed/moOosWuoDyA?rel=0" allowfullscreen)
+                        iframe.video-embed(src="https://www.youtube.com/embed/Gt8771uy4U0?rel=0" allowfullscreen)
 != partial("_includes/menu-of-day-3")
 section.special-menu.style-3.padding-top-100.padding-bottom-100
     .container
