--- a/01.HTML/01.Restaurant/_includes/list-dish.jade
+++ b/01.HTML/01.Restaurant/_includes/list-dish.jade
@@ -14,7 +14,7 @@
                         sup $
                         span.number 49.00
                     span.unit /kg
-                a.btn.btn-seemore(href="#") full dishes
+                a.btn.btn-seemore(href="menu-gird.html") full dishes
                 svg.border-efect(width='100%', height='100%')
                     line.top(x1='0', y1='0', x2='1008', y2='0')
                     line.left(x1='0', y1='426', x2='0', y2='-852')
@@ -35,7 +35,7 @@
                         sup $
                         span.number 56.00
                     span.unit /kg
-                a.btn.btn-seemore(href="#") full dishes
+                a.btn.btn-seemore(href="menu-gird.html") full dishes
                 svg.border-efect(width='100%', height='100%')
                     line.top(x1='0', y1='0', x2='1008', y2='0')
                     line.left(x1='0', y1='426', x2='0', y2='-852')
@@ -56,7 +56,7 @@
                         sup $
                         span.number 37.00
                     span.unit /kg
-                a.btn.btn-seemore(href="#") full dishes
+                a.btn.btn-seemore(href="menu-gird.html") full dishes
                 svg.border-efect(width='100%', height='100%')
                     line.top(x1='0', y1='0', x2='1008', y2='0')
                     line.left(x1='0', y1='426', x2='0', y2='-852')
@@ -77,7 +77,7 @@
                         sup $
                         span.number 20.00
                     span.unit /kg
-                a.btn.btn-seemore(href="#") full dishes
+                a.btn.btn-seemore(href="menu-gird.html") full dishes
                 svg.border-efect(width='100%', height='100%')
                     line.top(x1='0', y1='0', x2='1008', y2='0')
                     line.left(x1='0', y1='426', x2='0', y2='-852')
