--- a/01.HTML/01.Restaurant/blog.jade
+++ b/01.HTML/01.Restaurant/blog.jade
@@ -22,7 +22,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                 .day 27
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title A deliciously noble catch of the day in Montparnasse
+                                a(href="blog-detail.html").title A deliciously noble catch of the day in Montparnasse
                                 .info
                                     .item.tag
                                         a.link(href="#") Food
@@ -35,7 +35,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                         span 26
                                 .description
                                     p.text Donec sed odio dui. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus , tortor mauris condimentum nibh.
-                                a(href="#").btn-readmore read more
+                                a(href="blog-detail.html").btn-readmore read more
                 .blog-post
                     .blog-image
                         .video-thumbnail
@@ -51,7 +51,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                 .day 28
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title Fish Tales sells all sorts of fresh fish
+                                a(href="blog-detail.html").title Fish Tales sells all sorts of fresh fish
                                 .info
                                     .item.tag
                                         a.link(href="#") sea food
@@ -64,7 +64,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                         span 52
                                 .description
                                     p.text Donec sed odio dui. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus , tortor mauris condimentum nibh.
-                                a(href="#").btn-readmore read more
+                                a(href="blog-detail.html").btn-readmore read more
                 .blog-post
                     .blog-content
                         .blog-detail-content
@@ -82,7 +82,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                             span.company (Grancie Company)
                                 .description
                                     p.text Donec sed odio dui. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus , tortor mauris condimentum nibh.
-                                a(href="#").btn-readmore read more
+                                a(href="blog-detail.html").btn-readmore read more
                 .blog-post
                     .blog-image
                         img.img-responsive(src="assets/images/news/news-6.jpg", alt="")
@@ -92,7 +92,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                 .day 30
                                 .month-year Aug-2016
                             .content
-                                a(href="#").title A deliciously noble catch of the day in Montparnasse
+                                a(href="blog-detail.html").title A deliciously noble catch of the day in Montparnasse
                                 .info
                                     .item.tag
                                         a.link(href="#") restaurant
@@ -105,7 +105,7 @@ section.page-main.padding-top-100.padding-bottom-100
                                         span 78
                                 .description
                                     p.text Donec sed odio dui. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Nulla vitae elit libero, a pharetra augue. Donec ullamcorper nulla non metus auctor fringilla. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus , tortor mauris condimentum nibh.
-                                a(href="#").btn-readmore read more
+                                a(href="blog-detail.html").btn-readmore read more
                 != partial("_includes/widgets/pagination")
             .col-md-4.col-xs-12.sidebar
                 .col-2
